--- a/Android/OpenCV Sample - face-detection/AndroidManifest.xml
+++ b/Android/OpenCV Sample - face-detection/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="org.opencv.samples.facedetect"
           android:versionCode="301"
           android:versionName="3.01">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:label="@string/app_name"
